--- a/Writeup/bounds.tex
+++ b/Writeup/bounds.tex
@@ -1,1 +1,17 @@
-../Analysis/bounds.tex
+%% tables of lower and upper bounds on the breakeven points
+\begin{tabular}{lrrrrrr}
+\toprule
+{m} &  100  &  500  &  1000   &  100  &  500  &  1000\\
+\midrule
+n    &       &       &       &     &       &       \\
+16   &     1 &     2 &     2 &   2 &     4 &     4 \\
+32   &     2 &     4 &     4 &   4 &     8 &     8 \\
+64   &     2 &     8 &     8 &   4 &    16 &    16 \\
+100  &     4 &   --- &   --- &   8 &   --- &   --- \\
+128  &   --- &    16 &    16 & --- &    32 &    32 \\
+256  &   --- &    32 &    32 & --- &    64 &    64 \\
+500  &   --- &    64 &   --- & --- &   125 &   --- \\
+512  &   --- &   --- &    64 & --- &   --- &   128 \\
+1000 &   --- &   --- &   128 & --- &   --- &   250 \\
+\bottomrule
+\end{tabular}
