Committed writeup changes and remaining matlab files we used
Not sure which .tex files you need so I included everything.  Sorry if
there's unnecessary stuff clogging our github.

--- a/Writeup/discussion.tex
+++ b/Writeup/discussion.tex
@@ -21,6 +21,12 @@
 
 \begin{figure}
 \centering
+\input{keven.1000.tex}
+\caption{Experimentally determined breakeven points for $m=100,500,1000$. Dashes indicate the test was not run.}
+\end{figure}
+
+\begin{figure}
+\centering
 % tables produced
 \input{bounds.tex}
 \caption{Tables of bounds on the $k$ where $r_e=1$. lower bounds (left) followed by upper bounds (right), dashes indicate the test was not run}
