--- a/Writeup/lexample.tex
+++ b/Writeup/lexample.tex
@@ -237,12 +237,22 @@ After computing $t_{full}$, $t_{eager}$ and $t_{lazy}$,  the median runtime for 
 \[r_l(m,n,k) = \frac{t_{full}(m,n,k)}{t_{lazy}(m,n,k)}
 \textrm{\hspace{1cm}and\hspace{1cm}}
 r_e(m,n,k) = \frac{t_{full}(m,n,k)}{t_{eager}(m,n,k)}\]
-Whenever these ratios are greater than 1, the specialized updating algorithms perform better than re-computing the QR factorization using Householder transformations.  Once these ratios become less than 1, however, it is more advantageous to re-compute the QR factorization.  In Figure~\ref{fig:1000plot} (left), we include a line called ``breakeven", which indicates when the ratio is equal to 1.  All points above this line imply the specialized updating algorithm is faster, while all points below this line imply the Householder algorithm is faster. This perspective is useful when the data vectors are of a fixed dimension and a practitioner is determining how columns can be altered in one batch before recomputation is more efficient than updating.
+Whenever these ratios are greater than 1, the specialized updating algorithms perform better than re-computing the QR factorization using Householder transformations. Once these ratios become less than 1, however, it is more advantageous to re-compute the QR factorization. In Figure~\ref{fig:1000plot} (left), we plot rl (m,n,k) versus log(k) for fixed values of n FOOTNOTE. This perspective is useful when the data vectors are of a fixed dimension and a practitioner is determining how columns can be altered in one batch before recomputation is more efficient than updating.  From these plots, we see that as log(k) increases, rl decreases for fixed n.  Specifically, we see a negative linear relationship, which confirms the inverse proportionality we anticipated in Section 4.
 
-Another perspective is determining for a fixed batch size $k$, how much faster is updating only that batch compared to the entire factorization as a function of the dimensionality of the problem $n$.
-in Figure~\ref{fig:1000plot} (right) we see that there is nearly linear growth in $r(m_0, n, k_0)$ as $n$ increases, when $m$ is large. This is what we would expect from the analytic bounds on flop counts.
+FOOTNOTE We only show rl since lazy outperformed eager in nearly every case
+
+On these plots we also include a line called "breakeven", which indicates when rl is equal to 1. All points above this line imply the lazy updating algorithm is faster, while all points below this line imply the Householder algorithm is faster.  By comparing the rl curves to the breakeven line, we see that the breakeven k value increases as n increases.  We also see that as m increases (successively lower plots), the curves shift up and to the right, indicating improved performance of the lazy algorithm.  For example, the n=64 curve crosses the breakeven line at log(k) = 1.25 for m = 100; at log(k) = 2.6 for m = 500; and, at log(k) = 2.8 for m =1000.  This tells us that the breakeven k value increases as m increases, for fixed n.  Thus, we have experimentally shown what we had predicted in Section 4: as the matrix size increases in either dimension, the breakeven point increases.
+
+Another perspective is determining for a fixed batch size $k$, how much faster is updating only that batch compared to the entire factorization as a function of the dimensionality of the problem $n$. We show this type of perspective in the plots of Figure~\ref{fig:1000plot} (right).  Here, we plot rl (m,n,k) versus n for fixed values of k FOOTNOTE. We see that there is nearly linear growth in $r(m_0, n, k_0)$ as $n$ increases, when $m$ is large. This is what we would expect from the analytic bounds on flop counts, as detailed in Section 4. We also see that as m increases, (successively lower plots), the curves shift upward for a fixed combination of n, k.  For example, for m=100, the k=1 curve has an rl value of 5.5 at n = 100; for m=500, the k=1 curve has an rl value of 22 at n = 500; and, for m=1000, the k=1 curve has an rl value of 32 for m =1000.  Thus, as $m$ increases for a fixed n,k pair, the Cm value increases, which corroborates our theory from Section 4.  We provide the tables that contain all of the data used to construct the plots in Figure 6.1 (left and right) in Figure 6.2.
 
 \input{discussion.tex}
+
+As detailed in Section 4, the model described by section Equation 4.3 can produce a prediction about the breakeven point by solving Cm n = k.  As described previously, we can determine Cm experimentally from our data, and then use this value to predict where the breakeven point will occur.  Figure 6.3 contains a table of experimentally determined breakeven points by using this method.  Comparing these values to their counterparts in Figure 6.4, which contains our analytic model's lower and upper bound predictions for the breakeven points, we see that all of our experimental results fall within the bounds predicted by our analytic model.
+
+\section{Conclusion}
+In this paper, we have shown how specialized algorithms can improve the performance of QR factorization updating under sparse additive updates.  We presented an analytic model and from this predicted the anticipated performance increase for various conditions.  Upon implementing the algorithms and comparing their performances, our experimental results from corroborated the theory we had presented.
+
+
 \begin{thebibliography}{10}
 
 \bibitem{Golub-VanLoan}
