--- a/Writeup/sle.tex
+++ b/Writeup/sle.tex
@@ -1,1 +1,16 @@
-../Analysis/sle.tex
+\begin{tabular}{lrrrrrrrrr}
+\toprule
+{n} &       2   &       4   &       8   &       16  &       32  &       64  &       128 &       256 &       500 \\
+\midrule
+k   &           &           &           &           &           &           &           &           &           \\
+1   &  1.068777 &  0.873562 &  1.031850 &  1.041150 &  1.090455 &  1.004557 &  0.926950 &  0.892085 &  0.765017 \\
+2   &       --- &  1.154296 &  1.386176 &  1.323947 &  1.236374 &  1.135942 &  1.113987 &  1.097880 &  1.080910 \\
+4   &       --- &       --- &  1.485518 &  1.352185 &  1.366703 &  1.277342 &  1.265582 &  1.256691 &  1.189780 \\
+8   &       --- &       --- &       --- &  1.437359 &  1.499571 &  1.392823 &  1.368057 &  1.325618 &  1.344703 \\
+16  &       --- &       --- &       --- &       --- &  1.452212 &  1.435012 &  1.417796 &  1.374305 &  1.458296 \\
+32  &       --- &       --- &       --- &       --- &       --- &  1.489916 &  1.458506 &  1.416496 &  1.514148 \\
+64  &       --- &       --- &       --- &       --- &       --- &       --- &  1.498177 &  1.491946 &  1.564830 \\
+125 &       --- &       --- &       --- &       --- &       --- &       --- &       --- &       --- &  1.709065 \\
+128 &       --- &       --- &       --- &       --- &       --- &       --- &       --- &  1.595344 &  1.742826 \\
+\bottomrule
+\end{tabular}
